[package]
name = "aes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
base64 = "0.22.0"
tonic = "0.11"
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
    name = "server"
    path = "src/server.rs"